--- a/notebook/plota_mapa-setores.ipynb
+++ b/notebook/plota_mapa-setores.ipynb
@@ -4346,16 +4346,8 @@
     }
    ],
    "source": [
-    "gdf"
+    "gdf.head(5)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "83203300-ecff-4c87-8c00-deb3b5b8f649",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
