--- a/notebook/Bairros_IBGE_preprocessamento0.ipynb
+++ b/notebook/Bairros_IBGE_preprocessamento0.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 1,
    "id": "5e4234b1-0e3d-43d2-9142-192b77557afc",
    "metadata": {},
    "outputs": [],
@@ -50,13 +50,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 2,
    "id": "bd767cdb-fa84-4761-b52d-6cb6cf2df847",
    "metadata": {},
    "outputs": [],
    "source": [
-    "path=\"/home/akel/PycharmProjects/Data_ambiental/data/bairros/raw\"\n",
-    "\n",
+    "path=\"/home/akel/PycharmProjects/Data_ambiental/data/raw/\"\n",
     "filename_a='tabela3033_a.csv'\n",
     "filename_b='tabela3033_b.csv'\n",
     "filename_c='tabela3033_c.csv'\n",
@@ -87,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 3,
    "id": "a8fc6b4d-aebc-4469-a00c-c3e3d6200426",
    "metadata": {},
    "outputs": [],
@@ -113,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 4,
    "id": "5ab24bee-97e7-4456-b8fd-59fc8467326d",
    "metadata": {},
    "outputs": [
@@ -129,7 +128,143 @@
     "#Verificar se são os mesmo bairros\n",
     "a=dfa['Bairro'].unique().tolist()\n",
     "A=dfA['Bairro'].unique().tolist()\n",
-    "print(list(set(B) - set(a)))"
+    "print(list(set(A) - set(a)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "4fb4a5d3-d1e8-4646-8e6f-61a5fbbf553e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 71 entries, 0 to 70\n",
+      "Data columns (total 4 columns):\n",
+      " #   Column      Non-Null Count  Dtype  \n",
+      "---  ------      --------------  -----  \n",
+      " 0   Bairro      71 non-null     object \n",
+      " 1   Habitações  71 non-null     int64  \n",
+      " 2   Moradores   71 non-null     int64  \n",
+      " 3   Média       71 non-null     float64\n",
+      "dtypes: float64(1), int64(2), object(1)\n",
+      "memory usage: 2.3+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "# juntando as 3 tabelas 3033a,b,c\n",
+    "#a-Número de domicílios particulares ocupados\n",
+    "#b-Pessoas residentes em domicílios particulares\n",
+    "#c-Média de moradores em domicílios particulares ocupados\n",
+    "\n",
+    "dfa_r=dfa.rename(columns={\n",
+    "    \"Total\": \"Habitações\"\n",
+    "})\n",
+    "dfb_r=dfb.rename(columns={\n",
+    "    \"Total\": \"Moradores\"\n",
+    "})\n",
+    "dfc_r=dfc.rename(columns={\n",
+    "    \"Total\": \"Média\"\n",
+    "})\n",
+    "\n",
+    "dfa_r = dfa_r[[\"Bairro\", \"Habitações\"]]\n",
+    "dfb_r = dfb_r[[\"Bairro\", \"Moradores\"]]\n",
+    "dfc_r = dfc_r[[\"Bairro\", \"Média\"]]\n",
+    "\n",
+    "df_final=dfa_r.copy()\n",
+    "df_final['Moradores']=dfb_r['Moradores']\n",
+    "df_final['Média']=dfc_r['Média']\n",
+    "df_final.head(3)\n",
+    "df_final[\"Média\"] = df_final[\"Média\"].str.replace(\",\", \".\", regex=False).astype(float)\n",
+    "\n",
+    "df_final.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "282038d2-e97e-490d-bab3-6b3d315f3c3f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1065 entries, 0 to 1064\n",
+      "Data columns (total 14 columns):\n",
+      " #   Column          Non-Null Count  Dtype  \n",
+      "---  ------          --------------  -----  \n",
+      " 0   Bairro          1065 non-null   object \n",
+      " 1   Grupo de idade  1065 non-null   object \n",
+      " 2   N               1058 non-null   float64\n",
+      " 3   N Homens        1055 non-null   float64\n",
+      " 4   N Mulheres      1049 non-null   float64\n",
+      " 5   P               1058 non-null   float64\n",
+      " 6   P Homens        1055 non-null   float64\n",
+      " 7   P Mulheres      1049 non-null   float64\n",
+      " 8   avg             1058 non-null   float64\n",
+      " 9   avg Homens      1055 non-null   float64\n",
+      " 10  avg Mulheres    1049 non-null   float64\n",
+      " 11  mdn             1058 non-null   float64\n",
+      " 12  mdn Homens      1055 non-null   float64\n",
+      " 13  mdn Mulheres    1049 non-null   float64\n",
+      "dtypes: float64(12), object(2)\n",
+      "memory usage: 116.6+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "# juntando as 4 tabelas 3170 A,B,C D\n",
+    "dfA_r=dfA.rename(columns={\n",
+    "    \"Total\": \"N\",\n",
+    "    \"Total.1\":'N Homens',\n",
+    "    \"Total.2\": 'N Mulheres'})\n",
+    "\n",
+    "dfB_r=dfB.rename(columns={\n",
+    "    \"Total\": \"P\",\n",
+    "    \"Total.1\":'P Homens',\n",
+    "    \"Total.2\": 'P Mulheres'})\n",
+    "\n",
+    "dfC_r=dfC.rename(columns={\n",
+    "    \"Total\": \"avg\",\n",
+    "    \"Total.1\":'avg Homens',\n",
+    "    \"Total.2\": 'avg Mulheres'})\n",
+    "\n",
+    "dfD_r=dfD.rename(columns={\n",
+    "    \"Total\": \"mdn\",\n",
+    "    \"Total.1\":'mdn Homens',\n",
+    "    \"Total.2\": 'mdn Mulheres'})\n",
+    "\n",
+    "DF_FINAL=dfA_r.copy()\n",
+    "DF_FINAL[\"P\"] = dfB_r[\"P\"]\n",
+    "DF_FINAL[\"P Homens\"] = dfB_r[\"P Homens\"]\n",
+    "DF_FINAL[\"P Mulheres\"] = dfB_r[\"P Mulheres\"]\n",
+    "\n",
+    "DF_FINAL[\"avg\"] = dfC_r[\"avg\"]\n",
+    "DF_FINAL[\"avg Homens\"] = dfC_r[\"avg Homens\"]\n",
+    "DF_FINAL[\"avg Mulheres\"] = dfC_r[\"avg Mulheres\"]\n",
+    "\n",
+    "DF_FINAL[\"mdn\"] = dfD_r[\"mdn\"]\n",
+    "DF_FINAL[\"mdn Homens\"] = dfD_r[\"mdn Homens\"]\n",
+    "DF_FINAL[\"mdn Mulheres\"] = dfD_r[\"mdn Mulheres\"]\n",
+    "\n",
+    "# Lista de colunas não numéricas\n",
+    "nao_numericas = [\"Bairro\", \"Grupo de idade\"]\n",
+    "temp=DF_FINAL.copy()\n",
+    "\n",
+    "# Para todas as outras colunas:\n",
+    "for col in temp.columns:\n",
+    "    if col not in nao_numericas:\n",
+    "        temp[col] = temp[col].str.replace(\",\", \".\", regex=False)\n",
+    "        temp[col] = pd.to_numeric(temp[col], errors=\"coerce\")\n",
+    "\n",
+    "DF_FINAL=temp.copy()\n",
+    "DF_FINAL.info()"
    ]
   },
   {
@@ -142,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 16,
    "id": "8624118e-6a29-4dc7-a613-462b543f5768",
    "metadata": {},
    "outputs": [
@@ -150,13 +285,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "⚠️ Arquivo já existe e NÃO será sobrescrito: /home/akel/PycharmProjects/Data_ambiental/data/process/tabela3033a.csv\n",
-      "⚠️ Arquivo já existe e NÃO será sobrescrito: /home/akel/PycharmProjects/Data_ambiental/data/process/tabela3033b.csv\n",
-      "⚠️ Arquivo já existe e NÃO será sobrescrito: /home/akel/PycharmProjects/Data_ambiental/data/process/tabela3033c.csv\n",
-      "⚠️ Arquivo já existe e NÃO será sobrescrito: /home/akel/PycharmProjects/Data_ambiental/data/process/tabela3170A.csv\n",
-      "⚠️ Arquivo já existe e NÃO será sobrescrito: /home/akel/PycharmProjects/Data_ambiental/data/process/tabela3170B.csv\n",
-      "⚠️ Arquivo já existe e NÃO será sobrescrito: /home/akel/PycharmProjects/Data_ambiental/data/process/tabela3170C.csv\n",
-      "⚠️ Arquivo já existe e NÃO será sobrescrito: /home/akel/PycharmProjects/Data_ambiental/data/process/tabela3170D.csv\n"
+      "✅ Arquivo salvo: /home/akel/PycharmProjects/Data_ambiental/data/process/tabela3033_final.csv\n",
+      "✅ Arquivo salvo: /home/akel/PycharmProjects/Data_ambiental/data/process/tabela3170_final.csv\n"
      ]
     }
    ],
@@ -170,16 +300,17 @@
     "        print(f\"✅ Arquivo salvo: {caminho}\")\n",
     "\n",
     "path = '/home/akel/PycharmProjects/Data_ambiental/data/process/'\n",
-    "\n",
-    "salvar_csv(dfa, path + 'tabela3033a.csv')\n",
-    "salvar_csv(dfb, path + 'tabela3033b.csv')\n",
-    "salvar_csv(dfc, path + 'tabela3033c.csv')\n",
-    "\n",
-    "salvar_csv(dfA, path + 'tabela3170A.csv')\n",
-    "salvar_csv(dfB, path + 'tabela3170B.csv')\n",
-    "salvar_csv(dfC, path + 'tabela3170C.csv')\n",
-    "salvar_csv(dfD, path + 'tabela3170D.csv')"
+    "salvar_csv(df_final, path + 'tabela3033_final.csv')\n",
+    "salvar_csv(DF_FINAL, path + 'tabela3170_final.csv')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fad77d4b-3344-4df4-a34a-000a491d7aa5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
