--- a/notebook/Bairros_IBGE_preprocessamento0.ipynb
+++ b/notebook/Bairros_IBGE_preprocessamento0.ipynb
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "4fb4a5d3-d1e8-4646-8e6f-61a5fbbf553e",
    "metadata": {},
    "outputs": [
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "282038d2-e97e-490d-bab3-6b3d315f3c3f",
    "metadata": {},
    "outputs": [
@@ -268,6 +268,190 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "28617190-0ad0-4b91-bbd7-3a80b89ef62e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Bairro</th>\n",
+       "      <th>Habitações</th>\n",
+       "      <th>Moradores</th>\n",
+       "      <th>Média</th>\n",
+       "      <th>N</th>\n",
+       "      <th>avg</th>\n",
+       "      <th>mdn</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Batista Campos</td>\n",
+       "      <td>5795</td>\n",
+       "      <td>19062</td>\n",
+       "      <td>3.29</td>\n",
+       "      <td>11763.0</td>\n",
+       "      <td>3742.05</td>\n",
+       "      <td>2000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Canudos</td>\n",
+       "      <td>3619</td>\n",
+       "      <td>13789</td>\n",
+       "      <td>3.81</td>\n",
+       "      <td>7863.0</td>\n",
+       "      <td>1275.72</td>\n",
+       "      <td>700.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Cidade Velha</td>\n",
+       "      <td>3086</td>\n",
+       "      <td>12119</td>\n",
+       "      <td>3.93</td>\n",
+       "      <td>6976.0</td>\n",
+       "      <td>1931.71</td>\n",
+       "      <td>1000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Condor</td>\n",
+       "      <td>10414</td>\n",
+       "      <td>42699</td>\n",
+       "      <td>4.10</td>\n",
+       "      <td>20917.0</td>\n",
+       "      <td>845.55</td>\n",
+       "      <td>510.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Cremação</td>\n",
+       "      <td>8324</td>\n",
+       "      <td>31257</td>\n",
+       "      <td>3.76</td>\n",
+       "      <td>17096.0</td>\n",
+       "      <td>1769.97</td>\n",
+       "      <td>800.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>66</th>\n",
+       "      <td>Murubira</td>\n",
+       "      <td>437</td>\n",
+       "      <td>1517</td>\n",
+       "      <td>3.47</td>\n",
+       "      <td>778.0</td>\n",
+       "      <td>703.39</td>\n",
+       "      <td>510.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>67</th>\n",
+       "      <td>Bonfim</td>\n",
+       "      <td>210</td>\n",
+       "      <td>776</td>\n",
+       "      <td>3.70</td>\n",
+       "      <td>209.0</td>\n",
+       "      <td>534.64</td>\n",
+       "      <td>480.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>68</th>\n",
+       "      <td>Marahú</td>\n",
+       "      <td>42</td>\n",
+       "      <td>132</td>\n",
+       "      <td>3.14</td>\n",
+       "      <td>72.0</td>\n",
+       "      <td>1545.19</td>\n",
+       "      <td>740.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>69</th>\n",
+       "      <td>Paraíso</td>\n",
+       "      <td>95</td>\n",
+       "      <td>315</td>\n",
+       "      <td>3.32</td>\n",
+       "      <td>172.0</td>\n",
+       "      <td>740.55</td>\n",
+       "      <td>500.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>70</th>\n",
+       "      <td>Baía do Sol</td>\n",
+       "      <td>589</td>\n",
+       "      <td>2414</td>\n",
+       "      <td>4.10</td>\n",
+       "      <td>1119.0</td>\n",
+       "      <td>661.48</td>\n",
+       "      <td>510.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>71 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Bairro  Habitações  Moradores  Média        N      avg     mdn\n",
+       "0   Batista Campos        5795      19062   3.29  11763.0  3742.05  2000.0\n",
+       "1          Canudos        3619      13789   3.81   7863.0  1275.72   700.0\n",
+       "2     Cidade Velha        3086      12119   3.93   6976.0  1931.71  1000.0\n",
+       "3           Condor       10414      42699   4.10  20917.0   845.55   510.0\n",
+       "4         Cremação        8324      31257   3.76  17096.0  1769.97   800.0\n",
+       "..             ...         ...        ...    ...      ...      ...     ...\n",
+       "66        Murubira         437       1517   3.47    778.0   703.39   510.0\n",
+       "67          Bonfim         210        776   3.70    209.0   534.64   480.0\n",
+       "68          Marahú          42        132   3.14     72.0  1545.19   740.5\n",
+       "69         Paraíso          95        315   3.32    172.0   740.55   500.0\n",
+       "70     Baía do Sol         589       2414   4.10   1119.0   661.48   510.0\n",
+       "\n",
+       "[71 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Filtrar somente grupo \"Total\"\n",
+    "DF_total=DF_FINAL[DF_FINAL['Grupo de idade']=='Total'].copy()  # filtrar totais\n",
+    "DF_total\n",
+    "# Selecionar apenas as colunas necessárias\n",
+    "df_sel = DF_total[['Bairro', 'N', 'avg', 'mdn']]\n",
+    "# Merge pela chave \"Bairro\"\n",
+    "df_total_final = df_final.merge(df_sel, on='Bairro', how='left')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "aa32d316-43ab-4949-ba86-bf985c69564a",
    "metadata": {},
@@ -277,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "id": "8624118e-6a29-4dc7-a613-462b543f5768",
    "metadata": {},
    "outputs": [
@@ -285,8 +469,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Arquivo salvo: /home/akel/PycharmProjects/Data_ambiental/data/process/tabela3033_final.csv\n",
-      "✅ Arquivo salvo: /home/akel/PycharmProjects/Data_ambiental/data/process/tabela3170_final.csv\n"
+      "⚠️ Arquivo já existe e NÃO será sobrescrito: /home/akel/PycharmProjects/Data_ambiental/data/process/tabela3033_final.csv\n",
+      "⚠️ Arquivo já existe e NÃO será sobrescrito: /home/akel/PycharmProjects/Data_ambiental/data/process/tabela3170_final.csv\n",
+      "✅ Arquivo salvo: /home/akel/PycharmProjects/Data_ambiental/data/process/tabela_total_final.csv\n"
      ]
     }
    ],
@@ -301,13 +486,22 @@
     "\n",
     "path = '/home/akel/PycharmProjects/Data_ambiental/data/process/'\n",
     "salvar_csv(df_final, path + 'tabela3033_final.csv')\n",
-    "salvar_csv(DF_FINAL, path + 'tabela3170_final.csv')"
+    "salvar_csv(DF_FINAL, path + 'tabela3170_final.csv')\n",
+    "salvar_csv(df_total_final, path + 'tabela_total_final.csv')\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "fad77d4b-3344-4df4-a34a-000a491d7aa5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "66ab53ab-7df0-4973-9678-fe0aacbb6b73",
    "metadata": {},
    "outputs": [],
    "source": []
