--- a/notebook/Teste_maps.ipynb
+++ b/notebook/Teste_maps.ipynb
@@ -36,10 +36,288 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "71f106c8-98ac-43b3-a526-468584450f81",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Bairro</th>\n",
+       "      <th>Grupo de idade</th>\n",
+       "      <th>N</th>\n",
+       "      <th>N Homens</th>\n",
+       "      <th>N Mulheres</th>\n",
+       "      <th>P</th>\n",
+       "      <th>P Homens</th>\n",
+       "      <th>P Mulheres</th>\n",
+       "      <th>avg</th>\n",
+       "      <th>avg Homens</th>\n",
+       "      <th>avg Mulheres</th>\n",
+       "      <th>mdn</th>\n",
+       "      <th>mdn Homens</th>\n",
+       "      <th>mdn Mulheres</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Batista Campos</td>\n",
+       "      <td>Total</td>\n",
+       "      <td>11763.0</td>\n",
+       "      <td>5232.0</td>\n",
+       "      <td>6531.0</td>\n",
+       "      <td>100.00</td>\n",
+       "      <td>44.48</td>\n",
+       "      <td>55.52</td>\n",
+       "      <td>3742.05</td>\n",
+       "      <td>4662.24</td>\n",
+       "      <td>3004.88</td>\n",
+       "      <td>2000.0</td>\n",
+       "      <td>2550.0</td>\n",
+       "      <td>1700.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Batista Campos</td>\n",
+       "      <td>10 a 14 anos</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>0.29</td>\n",
+       "      <td>0.16</td>\n",
+       "      <td>0.13</td>\n",
+       "      <td>1064.65</td>\n",
+       "      <td>1164.42</td>\n",
+       "      <td>938.27</td>\n",
+       "      <td>500.0</td>\n",
+       "      <td>255.0</td>\n",
+       "      <td>510.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Batista Campos</td>\n",
+       "      <td>15 a 19 anos</td>\n",
+       "      <td>235.0</td>\n",
+       "      <td>92.0</td>\n",
+       "      <td>143.0</td>\n",
+       "      <td>2.00</td>\n",
+       "      <td>0.78</td>\n",
+       "      <td>1.22</td>\n",
+       "      <td>670.00</td>\n",
+       "      <td>718.66</td>\n",
+       "      <td>638.69</td>\n",
+       "      <td>510.0</td>\n",
+       "      <td>510.0</td>\n",
+       "      <td>510.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Batista Campos</td>\n",
+       "      <td>15 a 17 anos</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>36.0</td>\n",
+       "      <td>44.0</td>\n",
+       "      <td>0.68</td>\n",
+       "      <td>0.31</td>\n",
+       "      <td>0.37</td>\n",
+       "      <td>649.31</td>\n",
+       "      <td>765.00</td>\n",
+       "      <td>554.66</td>\n",
+       "      <td>505.0</td>\n",
+       "      <td>500.0</td>\n",
+       "      <td>510.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Batista Campos</td>\n",
+       "      <td>18 ou 19 anos</td>\n",
+       "      <td>155.0</td>\n",
+       "      <td>56.0</td>\n",
+       "      <td>99.0</td>\n",
+       "      <td>1.32</td>\n",
+       "      <td>0.48</td>\n",
+       "      <td>0.84</td>\n",
+       "      <td>680.67</td>\n",
+       "      <td>688.88</td>\n",
+       "      <td>676.03</td>\n",
+       "      <td>510.0</td>\n",
+       "      <td>510.0</td>\n",
+       "      <td>510.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1060</th>\n",
+       "      <td>Baía do Sol</td>\n",
+       "      <td>45 a 49 anos</td>\n",
+       "      <td>75.0</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>37.0</td>\n",
+       "      <td>6.70</td>\n",
+       "      <td>3.40</td>\n",
+       "      <td>3.31</td>\n",
+       "      <td>745.97</td>\n",
+       "      <td>760.79</td>\n",
+       "      <td>730.76</td>\n",
+       "      <td>510.0</td>\n",
+       "      <td>510.0</td>\n",
+       "      <td>500.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1061</th>\n",
+       "      <td>Baía do Sol</td>\n",
+       "      <td>50 a 54 anos</td>\n",
+       "      <td>78.0</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>6.97</td>\n",
+       "      <td>4.47</td>\n",
+       "      <td>2.50</td>\n",
+       "      <td>1143.18</td>\n",
+       "      <td>759.70</td>\n",
+       "      <td>1827.96</td>\n",
+       "      <td>510.0</td>\n",
+       "      <td>510.0</td>\n",
+       "      <td>510.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1062</th>\n",
+       "      <td>Baía do Sol</td>\n",
+       "      <td>55 a 59 anos</td>\n",
+       "      <td>70.0</td>\n",
+       "      <td>41.0</td>\n",
+       "      <td>29.0</td>\n",
+       "      <td>6.26</td>\n",
+       "      <td>3.66</td>\n",
+       "      <td>2.59</td>\n",
+       "      <td>898.00</td>\n",
+       "      <td>791.00</td>\n",
+       "      <td>1049.28</td>\n",
+       "      <td>510.0</td>\n",
+       "      <td>510.0</td>\n",
+       "      <td>510.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1063</th>\n",
+       "      <td>Baía do Sol</td>\n",
+       "      <td>60 a 69 anos</td>\n",
+       "      <td>132.0</td>\n",
+       "      <td>73.0</td>\n",
+       "      <td>59.0</td>\n",
+       "      <td>11.80</td>\n",
+       "      <td>6.52</td>\n",
+       "      <td>5.27</td>\n",
+       "      <td>808.44</td>\n",
+       "      <td>856.66</td>\n",
+       "      <td>748.78</td>\n",
+       "      <td>510.0</td>\n",
+       "      <td>510.0</td>\n",
+       "      <td>510.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1064</th>\n",
+       "      <td>Baía do Sol</td>\n",
+       "      <td>70 anos ou mais</td>\n",
+       "      <td>105.0</td>\n",
+       "      <td>65.0</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>9.38</td>\n",
+       "      <td>5.81</td>\n",
+       "      <td>3.57</td>\n",
+       "      <td>781.63</td>\n",
+       "      <td>872.55</td>\n",
+       "      <td>633.88</td>\n",
+       "      <td>510.0</td>\n",
+       "      <td>510.0</td>\n",
+       "      <td>510.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1065 rows × 14 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              Bairro   Grupo de idade        N  N Homens  N Mulheres       P  \\\n",
+       "0     Batista Campos            Total  11763.0    5232.0      6531.0  100.00   \n",
+       "1     Batista Campos     10 a 14 anos     34.0      19.0        15.0    0.29   \n",
+       "2     Batista Campos     15 a 19 anos    235.0      92.0       143.0    2.00   \n",
+       "3     Batista Campos     15 a 17 anos     80.0      36.0        44.0    0.68   \n",
+       "4     Batista Campos    18 ou 19 anos    155.0      56.0        99.0    1.32   \n",
+       "...              ...              ...      ...       ...         ...     ...   \n",
+       "1060     Baía do Sol     45 a 49 anos     75.0      38.0        37.0    6.70   \n",
+       "1061     Baía do Sol     50 a 54 anos     78.0      50.0        28.0    6.97   \n",
+       "1062     Baía do Sol     55 a 59 anos     70.0      41.0        29.0    6.26   \n",
+       "1063     Baía do Sol     60 a 69 anos    132.0      73.0        59.0   11.80   \n",
+       "1064     Baía do Sol  70 anos ou mais    105.0      65.0        40.0    9.38   \n",
+       "\n",
+       "      P Homens  P Mulheres      avg  avg Homens  avg Mulheres     mdn  \\\n",
+       "0        44.48       55.52  3742.05     4662.24       3004.88  2000.0   \n",
+       "1         0.16        0.13  1064.65     1164.42        938.27   500.0   \n",
+       "2         0.78        1.22   670.00      718.66        638.69   510.0   \n",
+       "3         0.31        0.37   649.31      765.00        554.66   505.0   \n",
+       "4         0.48        0.84   680.67      688.88        676.03   510.0   \n",
+       "...        ...         ...      ...         ...           ...     ...   \n",
+       "1060      3.40        3.31   745.97      760.79        730.76   510.0   \n",
+       "1061      4.47        2.50  1143.18      759.70       1827.96   510.0   \n",
+       "1062      3.66        2.59   898.00      791.00       1049.28   510.0   \n",
+       "1063      6.52        5.27   808.44      856.66        748.78   510.0   \n",
+       "1064      5.81        3.57   781.63      872.55        633.88   510.0   \n",
+       "\n",
+       "      mdn Homens  mdn Mulheres  \n",
+       "0         2550.0        1700.0  \n",
+       "1          255.0         510.0  \n",
+       "2          510.0         510.0  \n",
+       "3          500.0         510.0  \n",
+       "4          510.0         510.0  \n",
+       "...          ...           ...  \n",
+       "1060       510.0         500.0  \n",
+       "1061       510.0         510.0  \n",
+       "1062       510.0         510.0  \n",
+       "1063       510.0         510.0  \n",
+       "1064       510.0         510.0  \n",
+       "\n",
+       "[1065 rows x 14 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#leitura dos dados\n",
     "path='/home/akel/PycharmProjects/Data_ambiental/data/process/'\n",
@@ -58,19 +336,174 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "c3ced935-f931-443c-b700-2fe298400bda",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Bairro</th>\n",
+       "      <th>Habitações</th>\n",
+       "      <th>Moradores</th>\n",
+       "      <th>Média</th>\n",
+       "      <th>N</th>\n",
+       "      <th>avg</th>\n",
+       "      <th>mdn</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Batista Campos</td>\n",
+       "      <td>5795</td>\n",
+       "      <td>19062</td>\n",
+       "      <td>3.29</td>\n",
+       "      <td>11763.0</td>\n",
+       "      <td>3742.05</td>\n",
+       "      <td>2000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Canudos</td>\n",
+       "      <td>3619</td>\n",
+       "      <td>13789</td>\n",
+       "      <td>3.81</td>\n",
+       "      <td>7863.0</td>\n",
+       "      <td>1275.72</td>\n",
+       "      <td>700.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Cidade Velha</td>\n",
+       "      <td>3086</td>\n",
+       "      <td>12119</td>\n",
+       "      <td>3.93</td>\n",
+       "      <td>6976.0</td>\n",
+       "      <td>1931.71</td>\n",
+       "      <td>1000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Condor</td>\n",
+       "      <td>10414</td>\n",
+       "      <td>42699</td>\n",
+       "      <td>4.10</td>\n",
+       "      <td>20917.0</td>\n",
+       "      <td>845.55</td>\n",
+       "      <td>510.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Cremação</td>\n",
+       "      <td>8324</td>\n",
+       "      <td>31257</td>\n",
+       "      <td>3.76</td>\n",
+       "      <td>17096.0</td>\n",
+       "      <td>1769.97</td>\n",
+       "      <td>800.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>66</th>\n",
+       "      <td>Murubira</td>\n",
+       "      <td>437</td>\n",
+       "      <td>1517</td>\n",
+       "      <td>3.47</td>\n",
+       "      <td>778.0</td>\n",
+       "      <td>703.39</td>\n",
+       "      <td>510.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>67</th>\n",
+       "      <td>Bonfim</td>\n",
+       "      <td>210</td>\n",
+       "      <td>776</td>\n",
+       "      <td>3.70</td>\n",
+       "      <td>209.0</td>\n",
+       "      <td>534.64</td>\n",
+       "      <td>480.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>68</th>\n",
+       "      <td>Marahú</td>\n",
+       "      <td>42</td>\n",
+       "      <td>132</td>\n",
+       "      <td>3.14</td>\n",
+       "      <td>72.0</td>\n",
+       "      <td>1545.19</td>\n",
+       "      <td>740.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>69</th>\n",
+       "      <td>Paraíso</td>\n",
+       "      <td>95</td>\n",
+       "      <td>315</td>\n",
+       "      <td>3.32</td>\n",
+       "      <td>172.0</td>\n",
+       "      <td>740.55</td>\n",
+       "      <td>500.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>70</th>\n",
+       "      <td>Baía do Sol</td>\n",
+       "      <td>589</td>\n",
+       "      <td>2414</td>\n",
+       "      <td>4.10</td>\n",
+       "      <td>1119.0</td>\n",
+       "      <td>661.48</td>\n",
+       "      <td>510.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>71 rows × 7 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "Index(['Bairro', 'geometry', 'Habitações', 'Moradores', 'Média', 'N', 'avg',\n",
-       "       'mdn'],\n",
-       "      dtype='object')"
+       "            Bairro  Habitações  Moradores  Média        N      avg     mdn\n",
+       "0   Batista Campos        5795      19062   3.29  11763.0  3742.05  2000.0\n",
+       "1          Canudos        3619      13789   3.81   7863.0  1275.72   700.0\n",
+       "2     Cidade Velha        3086      12119   3.93   6976.0  1931.71  1000.0\n",
+       "3           Condor       10414      42699   4.10  20917.0   845.55   510.0\n",
+       "4         Cremação        8324      31257   3.76  17096.0  1769.97   800.0\n",
+       "..             ...         ...        ...    ...      ...      ...     ...\n",
+       "66        Murubira         437       1517   3.47    778.0   703.39   510.0\n",
+       "67          Bonfim         210        776   3.70    209.0   534.64   480.0\n",
+       "68          Marahú          42        132   3.14     72.0  1545.19   740.5\n",
+       "69         Paraíso          95        315   3.32    172.0   740.55   500.0\n",
+       "70     Baía do Sol         589       2414   4.10   1119.0   661.48   510.0\n",
+       "\n",
+       "[71 rows x 7 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -85,7 +518,8 @@
     "\n",
     "# Unir geometria + atributos\n",
     "gdf_merged = gdf.merge(df_full, on=\"Bairro\", how=\"left\")\n",
-    "gdf_merged.columns"
+    "gdf_merged.columns\n",
+    "df_full"
    ]
   },
   {
