--- a/notebook/Bairros_IBGE_preprocessamento0.ipynb
+++ b/notebook/Bairros_IBGE_preprocessamento0.ipynb
@@ -11,7 +11,9 @@
     "\n",
     "### Resumo Descritivo do Código\n",
     "\n",
-    "O código realiza a leitura de múltiplos arquivos CSV contendo dados de bairros de Belém-PA, tanto do conjunto `tabela3033` quanto do `tabela3170`. Após a leitura:\n",
+    "O código realiza a leitura de múltiplos arquivos CSV contendo dados de bairros de Belém-PA, tanto do conjunto `tabela3033` quanto do `tabela3170` e salva `tabela_total_final.csv`* com as principais features.\n",
+    "\n",
+    "\n",
     "\n",
     "#### 1. Limpeza dos nomes de bairros\n",
     "- Remove o sufixo `- Belém (PA)` das colunas `Bairro` em todos os DataFrames, garantindo uniformidade.\n",
@@ -72,8 +74,7 @@
     "dfA = pd.read_csv(path+filename_A,sep=';',skiprows=5)\n",
     "dfB = pd.read_csv(path+filename_B,sep=';',skiprows=5)\n",
     "dfC = pd.read_csv(path+filename_C,sep=';',skiprows=5)\n",
-    "dfD = pd.read_csv(path+filename_D,sep=';',skiprows=5)\n",
-    "#dfe = pd.read_csv(path+filename_e,sep=';',skiprows=4)\n"
+    "dfD = pd.read_csv(path+filename_D,sep=';',skiprows=5)\n"
    ]
   },
   {
@@ -489,22 +490,6 @@
     "salvar_csv(DF_FINAL, path + 'tabela3170_final.csv')\n",
     "salvar_csv(df_total_final, path + 'tabela_total_final.csv')\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fad77d4b-3344-4df4-a34a-000a491d7aa5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "66ab53ab-7df0-4973-9678-fe0aacbb6b73",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -523,7 +508,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.13"
+   "version": "3.10.19"
   }
  },
  "nbformat": 4,
