--- a/notebook/Mapa_Setores_coleta_Folium.ipynb
+++ b/notebook/Mapa_Setores_coleta_Folium.ipynb
@@ -7953,16 +7953,8 @@
     "folium.LayerControl(collapsed=False).add_to(mapa_coleta)\n",
     "\n",
     "\n",
-    "mapa_coleta\n"
+    "mapa_coleta"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "92cf2c90-1f76-472d-bd53-a1f9e16b9ef3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
